# SkullStripping

./: CMakeLists.txt  main.cxx  main.xml
